# digital-store-bot

./: .env.example  .gitignore  CLAUDE.md  CONFIG_DOCUMENTATION.md  Dockerfile  LICENSE  MIGRATION_SUMMARY.md  README.md  docker-compose.yml  fix_imports.py  products.example.json  pyproject.toml  pytest.ini  requirements-dev.txt  restart.sh
config/: settings.example.yml  settings.security.example.yml
data/: .gitkeep  products.json
docs/: README.md
docs/architecture/: DEPENDENCY_INJECTOR_MIGRATION.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/development/: CLAUDE.md  coding-standards.md  scripts-guide.md  testing.md
docs/setup/: admin-guide.md  faq.md  installation.md  user-guide.md
locales/en/: messages.ftl
locales/ru/: messages.ftl
locales/zh/: messages.ftl
logs/: .gitkeep
scripts/: README.md  README_log_analysis.md  analyze_logs.py  check_services.py  deploy.sh  docker_deploy.sh  docker_manager.sh  filter_errors.py  fix_connection_pool.py  fix_database_errors.py  healthcheck.sh  init-db.sql  install.sh  quick_restart.sh  refactor_container_calls.py  refactor_handlers.py  restart_without_traefik.sh  setup.sh  start.sh
src/: __init__.py  main.py
src/application/commands/: __init__.py  example_user_commands.py
src/application/handlers/: __init__.py  example_event_handlers.py
src/application/queries/: __init__.py  example_user_queries.py
src/application/services/: __init__.py  order_service.py  payment_service.py  product_loader_service.py  product_service.py  promocode_service.py  referral_service.py  trial_service.py  user_service.py
src/core/: __init__.py  containers.py  test_setup.py
src/domain/entities/: __init__.py  base.py  invite.py  order.py  product.py  promocode.py  referral.py  user.py
src/domain/events/: __init__.py  base.py  invite_events.py  order_events.py  payment_events.py  product_events.py  promocode_events.py  referral_events.py  user_events.py
src/domain/repositories/: __init__.py  base.py  invite_repository.py  order_repository.py  product_repository.py  promocode_repository.py  referral_repository.py  user_repository.py
src/domain/services/: __init__.py  example_domain_service.py
src/domain/value_objects/: __init__.py  money.py  product_info.py  user_profile.py
src/infrastructure/background_tasks/: __init__.py  __main__.py  cleanup_tasks.py  notification_tasks.py  payment_tasks.py  scheduler_main.py  task_scheduler.py
src/infrastructure/configuration/: settings.py
src/infrastructure/database/: __init__.py  dependencies.py  manager.py  unit_of_work.py
src/infrastructure/messaging/: __init__.py  example_message_queue.py
src/infrastructure/notifications/: __init__.py  email_notifier.py  notification_service.py  telegram_notifier.py
static/: example_static_files.md
templates/: example_html_templates.md
tests/: __init__.py  conftest.py  test_example.py
tests/integration/: __init__.py  test_payment_flow.py
tests/unit/: __init__.py
(+71 files in other folders)
