[tool.poetry]
name = "digital-store-bot-v2"
version = "2.0.0"
description = "A decoupled digital store Telegram bot using Domain-Driven Design"
authors = ["Claude <claude@anthropic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# Core framework
aiogram = "^3.15.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"

# Dependency Injection
dependency-injector = "^4.42.0"

# Event System
dramatiq = "^1.18.0"
redis = "^5.2.1"

# Configuration
pyyaml = "^6.0.2"
environs = "^11.2.1"

# Utilities
babel = "^2.16.0"
cachetools = "^5.5.0"
requests = "^2.31.0"
apscheduler = "^3.11.0"

# Validation & Serialization
marshmallow = "^3.23.0"
marshmallow-dataclass = "^8.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
pytest-cov = "^4.1.0"
pytest-dependency = "^0.6.0"
factory-boy = "^3.3.0"
fakeredis = "^2.20.0"
aioresponses = "^0.7.4"
freezegun = "^1.3.0"

# Code Quality
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --disable-warnings --cov=src --cov-report=html --cov-report=term"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/infrastructure/database/migrations/*",
    "src/shared/testing/*",
    "tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
known_first_party = ["src"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "aiogram.*",
    "dramatiq.*",
    "dependency_injector.*",
    "factory.*"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"